--- a/templates/include/posts_list.html
+++ b/templates/include/posts_list.html
@@ -1,49 +1,51 @@
 
 <div id="search" class="entry" {{ "" if search else "style=\"display:none\"" }} >
-	<div class='title'>
-		<div class="tips">
-			<form action="/search" method="post">
-				Search：
-				<input type="text" value="{{ search or "" }}" placeholder="search here" name="keyword" />
-			</form>
-			{% if time %}
-			<span class="time-tips">{{ count }} results ({{ "%.2f"|format(time) }} seconds) </span>
-			{% endif %}
-		</div>
-	</div>
+    <div class='title'>
+        <div class="tips">
+            <form action="/search" method="post">
+                Search：
+                <input type="text" value="{{ search or "" }}" placeholder="search here" name="keyword" />
+            </form>
+            {% if time %}
+            <span class="time-tips">{{ count }} results ({{ "%.2f"|format(time) }} seconds) </span>
+            {% endif %}
+        </div>
+    </div>
 </div>
 
 {% for post in posts %}
 {% if not post.duplicate %}
 <div class="entry">
-	<div class='title'>
-		{% for source in post.source.strip("|").split("|") %}
-		<span class="tag"><a href="/{{ source }}">{{ source }}</a></span>
-		{% endfor %}
-		<a href="{{ post.url }}">{{ post.title }}</a>
-	</div>
-	<div class="content {{ " ".join(post.source.strip("|").split("|")) }}">
-		{{  post.content }}
-	</div>
-	<div class="tag">
-		<span>posted on {{ post.create_time }}</span>
-		{% if current_user %}
-		<span><a onclick="if (confirm('delete?')){
-			location.href = '/post/delete/{{ post.id }}';
-		}">delete</a></span>
-		{% endif %}
-	</div>
+    <div class="title">
+        {% for source in post.source.strip("|").split("|") %}
+        <span class="tag"><a href="/{{ source }}">{{ source }}</a></span>
+        {% endfor %}
+        <a href="{{ post.url }}">{{ post.title }}</a>
+    </div>
+    <div class="content {{ " ".join(post.source.strip("|").split("|")) }}">
+        {{  post.content }}
+    </div>
+    <div>
+        <ul class="info">
+            <li>posted on {{ post.create_time }}</li>
+            {% if current_user %}
+            <li><a href="#" onclick="if (confirm('delete post \'{{ post.title }}\' ?')){
+                location.href = '/post/delete/{{ post.id }}';
+            }">delete</a></li>
+            {% endif %}
+        </ul>
+    </div>
 </div>
 {% endif %}
 {% endfor %}
 {% if pager %}
 <div class="pager">
-	{% if pager.previous_page %}
-	<a class="pre" href="{{ pager.previous_page_url }}">previous</a>
-	{% endif %}
-	&nbsp;&nbsp;&nbsp;
-	{% if pager.next_page %}
-	<a class="next" href="{{ pager.next_page_url }}">next</a>
-	{% endif %}
+    {% if pager.previous_page %}
+    <a class="pre" href="{{ pager.previous_page_url }}">previous</a>
+    {% endif %}
+    &nbsp;&nbsp;&nbsp;
+    {% if pager.next_page %}
+    <a class="next" href="{{ pager.next_page_url }}">next</a>
+    {% endif %}
 </div>
 {% endif %}
