--- a/templates/past.html
+++ b/templates/past.html
@@ -16,8 +16,15 @@
                 <div class="content {{ " ".join(post.source.strip("|").split("|")) }}">
                     {{  post.content }}
                 </div>
-                <div class="tag">
-                    <span>Posted on {{ post.create_time }}</span>
+                <div>
+                    <ul class="info">
+                        <li>posted on {{ post.create_time }}</li>
+                        {% if current_user %}
+                        <li><a href="#" onclick="if (confirm('delete post \'{{ post.title }}\' ?')){
+                            location.href = '/post/delete/{{ post.id }}';
+                        }">delete</a></li>
+                        {% endif %}
+                    </ul>
                 </div>
             </div>
             {% endfor %}
