--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,16 @@
 <head>
     <title>{{ site["title"] }}{{ (" / " + title) if title else ""}}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0">
-    <link rel='alternate' type='application/rss+xml' title='atom 1.0' href='/feed' />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <link rel="alternate" type="application/rss+xml" title="atom 1.0" href="/feed">
     <link rel="apple-touch-icon" sizes="192x192" href="/static/img/icon.png">
-    <link rel="icon" type="image/png" href="/static/img/favicon.ico" sizes="48x48">
-    <link rel="icon" type="image/png" href="/static/img/icon.png" sizes="192x192">
-    <meta name="theme-color" content="#ffffff">
-    <meta name="msapplication-TileColor" content="#2d89ef">
+    <link rel="icon" type="image/png" sizes="48x48" href="/static/img/favicon.ico">
+    <link rel="icon" type="image/png" sizes="192x192" href="/static/img/icon.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="theme-color" content="#a6d6d6">
+    <meta name="msapplication-TileColor" content="#a6d6d6">
     <meta name="msapplication-TileImage" content="/static/img/icon.png">
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     {% block script %} {% endblock %}
