--- a/templates/chart.html
+++ b/templates/chart.html
@@ -9,9 +9,8 @@
             {% endfor %}
         </ul>
     </div>
-    <script type="text/javascript" src="http://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
-    <script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/highcharts.js"></script>
-    <script type="text/javascript" src="http://cdn.hcharts.cn/highcharts/exporting.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script type="text/javascript" src="//code.highcharts.com/highcharts.js"></script>
     <script type="text/javascript">
         $(function () {
             $('#chart_hour').highcharts({
