--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="zh-Hans">
 <head>
     <title>{{ site["title"] }}{{ (" / " + title) if title else ""}}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -47,7 +47,7 @@
         </div>
 
         <div class="footer">
-            ©2016 <a href="{{ site['domain'] }}">{{ site["title"] }}</a>. designed by <a href="http://caoyue.me" target="_blank">caoyue</a>. project <a href="https://github.com/caoyue/timeline.me" target="_blank">timeline.me</a>
+            ©2017 <a href="{{ site['domain'] }}">{{ site["title"] }}</a>. designed by <a href="http://caoyue.me" target="_blank">caoyue</a>. project <a href="https://github.com/caoyue/timeline.me" target="_blank">timeline.me</a>
         </div>
     </div>
 </body>
