--- a/templates/admin.html
+++ b/templates/admin.html
@@ -14,7 +14,7 @@
                 <h4><a href="/admin/compose">compose</a></h4>
             </li>
             <li class="listing-item">
-                <h4><a href="/admin/custom">custom</a></h4>
+                <h4><a href="/admin/visible">visible after signin</a></h4>
             </li>
             <li class="listing-item">
                 <h4><a href="/twitter/sync">twitter sync</a></h4>
