--- a/templates/visible.html
+++ b/templates/visible.html
@@ -15,7 +15,7 @@
         </ul>
         {{ xsrf_form_html() }}
         <p>
-            <input type="submit" value="custom" class="button" />
+            <input type="submit" value="Go" class="button" />
         </p>
     </form>
 </div>
