--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html lang="zh-Hans">
+
 <head>
     <title>{{ site["title"] }}{{ (" / " + title) if title else ""}}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -17,6 +18,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     {% block script %} {% endblock %}
 </head>
+
 <body>
     <div class="wrap">
         <div class="header">
@@ -47,8 +49,10 @@
         </div>
 
         <div class="footer">
-            ©2017 <a href="{{ site['domain'] }}">{{ site["title"] }}</a>. designed by <a href="http://caoyue.me" target="_blank">caoyue</a>. project <a href="https://github.com/caoyue/timeline.me" target="_blank">timeline.me</a>
+            ©{{ year }} <a href="{{ site['domain'] }}">{{ site["title"] }}</a>. designed by <a href="http://caoyue.me"
+                target="_blank">caoyue</a>. project <a href="https://github.com/caoyue/timeline.me" target="_blank">timeline.me</a>
         </div>
     </div>
 </body>
+
 </html>
